# GaladHen

./: .gitignore  .gitmodules  CMakeLists.txt  Material.h  README.md  main.cpp
App/: CMakeLists.txt  GaladHen.cpp
Core/: AssetsManager.cpp  AssetsManager.h  CMakeLists.txt  Camera.cpp  Camera.h  Color.h  FileLoader.cpp  FileLoader.h  Input.h  Light.cpp  Light.h  Material.cpp  Material.h  MaterialData.h  Mesh.cpp  Mesh.h  MeshData.h  Model.cpp  Model.h  Scene.cpp  SceneObject.cpp  SceneObject.h  Shader.cpp  ShaderProgram.h  Texture.cpp  Texture.h  TextureData.h  Transform.cpp  Transform.h  UI.h
Core/AABB/: AABB.cpp  AABB.h
Core/BVH/: BVH.cpp  BVH.h  BVHNode.h
Editor/: CMakeLists.txt  Editor.cpp  Editor.h
Editor/AssetsManager/: AssetLoader.cpp
Editor/UI/: Page.cpp  Page.h  Widget.cpp  Widget.h
Editor/UI/Pages/: MainPage.cpp  MainPage.h
Editor/UI/Widgets/: AssetsViewWidget.cpp  AssetsViewWidget.h  InspectorWidget.cpp  InspectorWidget.h  NavBarWidget.cpp  NavBarWidget.h  ViewportWidget.cpp  ViewportWidget.h
GaladHen/: AssetsManager.cpp  AssetsManager.h  CMakeLists.txt  Camera.cpp  Camera.h  Input.cpp  Input.h  Light.h  Material.cpp  Material.h  MaterialData.h  Mesh.cpp  Mesh.h  MeshData.h  Model.cpp  Model.h  Scene.cpp  SceneData.h  SceneObject.cpp  SceneObject.h  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  TextureData.h  TextureImage.cpp  TextureImage.h  Transform.h  Window.cpp  Window.h  light.cpp  light.h  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  pbrmaterial.cpp  (+16 more)
GaladHen/App/: CMakeLists.txt  GaladHenApp.cpp
GaladHen/Editor/: CMakeLists.txt  Editor.cpp  Editor.h
GaladHen/Editor/AssetsManager/: AssetLoader.cpp  AssetLoader.h  AssetsManager.cpp  AssetsManager.h
GaladHen/Editor/UI/: Widget.cpp  Widget.h
GaladHen/Editor/UI/Pages/: MainPage.cpp  MainPage.h
GaladHen/Editor/UI/Widgets/: AssetsViewWidget.cpp  AssetsViewWidget.h  InspectorWidget.cpp  InspectorWidget.h  NavBarWidget.cpp  NavBarWidget.h  ViewportWidget.cpp  ViewportWidget.h
GaladHen/Math/: CMakeLists.txt  Transform.cpp
GaladHen/Math/AABB/: AABB.cpp
GaladHen/Math/BVH/: BVH.cpp  BVH.h
GaladHen/Renderer/: CMakeLists.txt  Common.h  GPUResourceInspector.cpp  GPUResourceInspector.h  Renderer.cpp
GaladHen/Renderer/Entities/: Buffer.hpp  DirectionalLight.h  IGPUResource.h  Light.cpp  Material.h  Mesh.h  PointLight.cpp  Scene.h  SpotLight.cpp  SpotLight.h  Texture.cpp
GaladHen/Renderer/Entities/BufferData/: DirLightBufferData.h  LightingBufferData.h
GaladHen/Renderer/LayerAPI/: IWindowAPI.h
GaladHen/Renderer/LayerAPI/OpenGL/: RendererGL.cpp  RendererGL.h
GaladHen/Renderer/ShaderPreprocessor/: ShaderPreprocessor.cpp  ShaderPreprocessor.h
GaladHen/Shaders/Common/: ColorSpace.glsl  GammaCorrection.glsl  ShadowMapping.glsl
GaladHen/Shaders/Materials/: Bunny.frag  DebugShadowDepth.frag  Plane.frag  UnlitColor.frag  VertexUnlitColor.frag
GaladHen/Shaders/Materials/VertexUnlitColor/: VertexUnlitColor.frag
GaladHen/Shaders/ShadingModels/ShadowDepth/: ShadowDepth.frag  ShadowDepth.vert
GaladHen/Shaders/ShadingModels/Unlit/: Unlit.frag  Unlit.vert
GaladHen/Shaders/ShadingModels/pbr/: Pbr.frag  Pbr.vert
GaladHen/Shaders/ShadingModels/stylized/: Stylized.frag  Stylized.vert
GaladHen/Shaders/ShadingModels/test/: VertexShader.vert
GaladHen/Systems/: CMakeLists.txt  ISystem.h  SystemsCoordinator.cpp  SystemsCoordinator.h
GaladHen/Systems/AssetSystem/: AssetSystem.cpp  AssetSystem.h
GaladHen/Systems/InputSystem/: Input.h  InputSystem.cpp  InputSystem.h
GaladHen/Systems/InputSystem/LayerAPI/: IInputProvider.h
GaladHen/Systems/RenderingSystem/: CommandBuffer.h  Common.h  GPUResourceInspector.cpp  RenderingSystem.cpp  RenderingSystem.h
GaladHen/Systems/RenderingSystem/Entities/: Buffer.hpp  DirectionalLight.cpp  DirectionalLight.h  IGPUResource.cpp  IGPUResource.h  Light.h  Material.cpp  Material.h  Model.cpp  Model.h  PointLight.cpp  PointLight.h  RenderBuffer.cpp  RenderBuffer.h  SceneObject.cpp  SceneObject.h  ShaderPipeline.cpp  ShaderPipeline.h  Texture.cpp  Texture.h
GaladHen/Systems/RenderingSystem/LayerAPI/: IRendererAPI.h
GaladHen/Systems/RenderingSystem/ShaderPreprocessor/: ShaderPreprocessor.cpp  ShaderPreprocessor.h
GaladHen/Systems/RenderingSystem/UI/: Page.cpp  Page.h  Widget.cpp  Widget.h
GaladHen/Systems/TimeSystem/: TimeSystem.cpp  TimeSystem.h
GaladHen/Utils/: CMakeLists.txt  IdList.hpp  WeakSingleton.hpp  log.cpp  singleton.hpp
Math/: CMakeLists.txt  Math.cpp  Math.h  Ray.h  Transform.h
Math/AABB/: AABB.cpp  AABB.h
Math/BVH/: BVHNode.h
Renderer/: BufferData.h  CMakeLists.txt  CommandBuffer.h  Common.h  GPUResourceInspector.h  MeshData.h  RenderBuffer.cpp  RenderBuffer.h  Renderer.cpp  Renderer.h  ShaderData.h  TextureData.h  Window.cpp  Window.h
Renderer/Entities/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  DirectionalLight.cpp  IGPUResource.cpp  IGPUResource.h  Light.h  Material.cpp  Material.h  Mesh.cpp  Model.cpp  Model.h  PointLight.h  RenderBuffer.cpp  RenderBuffer.h  Scene.cpp  SceneObject.cpp  SceneObject.h  ShaderPipeline.h  SpotLight.cpp  SpotLight.h  Texture.cpp  Texture.h
Renderer/Entities/BufferData/: CameraBufferData.h  TransformBufferData.h
Renderer/LayerAPI/: CMakeLists.txt  IMaterialDataAPI.h  IMeshAPI.h  IRenderBufferAPI.h  IRendererAPI.h  IShaderProgramAPI.h  ITextureAPI.h  IWindowAPI.h  WindowGL.cpp  WindowGL.h
Renderer/LayerAPI/OpenGL/: CMakeLists.txt  FrameBufferGL.cpp  FrameBufferGL.h  MaterialDataGL.h  MeshGL.cpp  MeshGL.h  RenderBufferGL.cpp  RenderBufferGL.h  RenderFrameBufferGL.cpp  RenderFrameBufferGL.h  RendererGL.cpp  RendererGL.h  ShaderData.h  ShaderProgramGL.cpp  ShaderProgramGL.h  TextureFrameBufferGL.cpp  TextureFrameBufferGL.h  TextureGL.cpp  TextureGL.h  WindowGL.cpp  WindowGL.h
UI/: CMakeLists.txt  Page.h
libs/imgui/: CMakeLists.txt
libs/linux/gl3w/: CMakeLists.txt
utils/: CMakeLists.txt  FileLoader.cpp  FileLoader.h  IdList.hpp  log.cpp  log.h
utils/include/utils/: dblog.h  log.h  singleton.hpp
utils/src/: dblog.cpp  log.cpp  stb_image.cpp
(+76 files in other folders)
